...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/deletePollRecyclerView"
        android:layout_width="375dp"
        android:layout_height="300dp"
        android:layout_marginBottom="88dp"
        android:background="@color/button_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
    <Button
        android:id="@+id/button_create_poll"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/button"
        android:text="Create a New Poll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/button" />

    <TextView
        android:id="@+id/managePollsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Manage Polls"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voxChoiceTitle" />
...
