...

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/button_dashboard"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button"
            android:text="View Dashboard"
            app:icon="@drawable/dashboard"
            app:rippleColor="@color/button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />
...
